test higher gas limit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -383,6 +383,7 @@ workflows:
             branches:
               only:
                 - v2.0.0
+                - souradeep/dep_test
       - Deploy to Rinkeby with Gnosis and Vault:
           requires:
             - Deploy to Rinkeby
@@ -390,4 +391,5 @@ workflows:
             branches:
               only:
                 - v2.0.0
+                - souradeep/dep_test
 
